[package]
name = "sclangdispatcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12.22", default-features = false }
serde_json = "1.0.140"
tokio = { version = "1.46.1", default-features = false, features = ["macros", "rt-multi-thread"] }
warp = { version = "0.3.7", default-features = false }
